@@ -386,6 +386,9 @@ CMaskAndGate::inGate(CEvent& rEvent, const vector<UInt_t>& Params)
 Bool_t
 CMaskAndGate::inGate(CEvent& rEvent)
 {
+  if (!rEvent[m_nId].isValid()) {
+    return kfFALSE;		// short circuit if not valid.
+  }
   long value = rEvent[m_nId];
   if ((value & m_cCompare) == m_cCompare ) 
     {
